# SGX-ADL

./: .clang-format  .gitignore  .gitmodules  .projectile  CMakeLists.1.cmake  CMakeLists.txt  README.md  todos.org
.devcontainer/: devcontainer.json
.devcontainer/scripts/: Dockerfile  Dockerfile_devcontainer_cuda  build_and_run_aesm_docker.sh  build_instantiate_compose.sh  docker-compose.yml
cmake/: Analyzers.cmake  CachePreLoader.cmake  ClangTidy.cmake  Configs.cmake  FindCppCheck.cmake  FindSGX.cmake  Utilities.cmake
include/: AES128-visitor.h  common-configs.h  common-configs.h.in  common-structures.h  common.h  concurrentqueue.h  flats-util.hpp  hexString.h
include/Channel/: BasicChannel.hpp  IChannel.h  IChannel.hpp  IChannelOneWayReceiver.h  IChannelOneWaySender.h  IChannelTwoWay.h  IChannelTwoWay.hpp  IOneWayReceiver.hpp  IOneWaySender.hpp  SimpleOneWayReceiver.h  SimpleOneWaySender.h  SimpleTwoWayChannel.h
include/Crtp/: Crtp.hpp
include/Record/: IRecord.h  IRecordSet.h  IRecordSetView.h  ImageRecord.h  ImageWithLabelRecord.h  VectorRecordSet.h  VectorRecordSetView.h
include/Security/: IAuthenticatedIntegrity.h  IEncryption.h  IIntegrity.h  ISignature.h
include/Sort/: ISort.h  ObliviousSort.h
include/Storage/: IStorage.h
include/Visitors/: IVisitable.h  Visitor.h
include/fbs_gen_code/: aes128ctr_generated.h  aes128gcm_generated.h  cmac128_generated.h  enums_generated.h  multipleunitparamset_generated.h  plainimage_generated.h  plainimagelabel_generated.h  plainimagelabelmeta_generated.h  plainimagelabelset_generated.h  plainimagemeta_generated.h  plainimageset_generated.h  plainlabel_generated.h  plainlabelmeta_generated.h  plainlabelset_generated.h  signedECC_generated.h  singleunitparamset_generated.h  taskconfig_generated.h
include/gsl/: gsl-lite.hpp
include/ported-intrinsics/: immintrin.h  x86intrin.h
include/rand/: PRNG.h  PRNGHelper.h
patches/: oneDNN-v1.4.patch
python/: .gitignore  Graphs.ipynb  Lasagne Test.ipynb  Some-combinatorics.ipynb  Training-Noise Addition.ipynb  Trying TF-GPU.ipynb  cifar10-90-training.py  cifar10-evaluate-with-noise.py  cifar10-train.py  darknet_net_estimates.py  gtsd-1.py  lasagne-cifar-10.py  lasagne-mnist.py  log.txt  mnist-1-training.py  run-log-test.txt  tf-cifar10.py  tf-test-checkpoint.py
python/.ipynb_checkpoints/: Training-Noise Addition-checkpoint.ipynb
python/SGXADLPY/: all_funcs.py  serialize.py
python/SGXADLPY/CryptoUtils/: AEnccryptDecrypt.py  SignVerify.py  gen_aesgcm128_key.py  gen_ecc_kp.py
python/SGXADLPY/fbs_gen_code/: AESCTR128Enc.py  AESGCM128Enc.py  ArchConfig.py  CMAC128Auth.py  DataConfig.py  EnumComputationTaskType.py  EnumSecurityType.py  MultipleUnitParamSet.py  PlainImage.py  PlainImageLabel.py  PlainImageLabelMeta.py  PlainImageLabelSet.py  PlainImageLabelWAuth.py  PlainImageMeta.py  PlainImageSet.py  PlainLabel.py  PlainLabelMeta.py  PlainLabelSet.py  PredictLocationsConfigs.py  SignedECC.py  SingleUnitParamSet.py  TaskConfig.py  TrainLocationsConfigs.py
python/backdoor_data_poisoning/: .gitignore  Backdoor-Attack-Analysis.ipynb  CIFAR10-POISONING.ipynb  Clustering-Analysis.ipynb  Kolmogrov_Smirnov Test.ipynb  Poisoned-Models-Instructions-Balnur.ipynb  Poisoned-Models-Instructions.ipynb  Python-Notebook-Dr.Murat-Poisoning.ipynb  Random-Input-Imagenet-Clean-Poisoned-MNIST-Models.ipynb  TF-Randomness-Verification Test.ipynb  VGG16-CIFAR10-POISONING-PYTHON-3.ipynb  clean-run.py  config.json  config_backdoor.json  config_clean.json  mnist_poison_util.py  myutil.py  simple_conv.py  ts_cluster.py
schemas/: aes128ctr.fbs  aes128gcm.fbs  cmac128.fbs  enums.fbs  main_schema.proto  multipleunitparamset.fbs  plainimage.fbs  plainimagelabel.fbs  plainimagelabelmeta.fbs  plainimagelabelset.fbs  plainimagemeta.fbs  plainimageset.fbs  plainlabel.fbs  plainlabelmeta.fbs  plainlabelset.fbs  signedECC.fbs  singleunitparamset.fbs  taskconfig.fbs
scripts/: build_cmake_dir.sh  clangtidy-log.txt  cppcheck-log.txt  my-clangtidy.sh  my-cppcheck.sh  prepare-env.sh  useful-cmds.txt
src/: hexString.cpp
src/Channel/: IChannel.cpp  IChannelOneWayReceiver.cpp  IChannelOneWaySender.cpp  IChannelTwoWay.cpp  SimpleOneWayReceiver.cpp  SimpleOneWaySender.cpp  SimpleTwoWayChannel.cpp
src/Record/: IRecord.cpp  IRecordSet.cpp  ImageRecord.cpp  ImageWithLabelRecord.cpp  VectorRecordSet.cpp  VectorRecordSetView.cpp
test/: sample-job-config.json
test/config/cifar10/: cifar.cfg  cifar10-train-config.json  cifar_small.cfg  cifar_small_fc.cfg  cifar_small_fc_gpu_subdiv_1_enclavesubdive_128.cfg  cifar_small_fc_nobatchnorm.cfg  (+7 more)
test/unittests/: Record-tests.cpp  SGXADL-GeneralEnclave_test.cpp  SGXADL-tests.cpp  memory-pool-tests.cpp
trusted/: SGXADL-Enclave.config.xml  SGXADL-Enclave.config.xml.in  enclave-debug.lds  enclave-release.lds  enclave.config.HW-Release.xml  enclave.config.fast.xml  enclave.config.xml  enclave.edl  enclave.lds  enclave_private.pem  enclave_public.pem  enclave_t.c  enclave_t.h  private_key.pem  public_key.pem
trusted/include/: BlockEngine.hpp  BlockHeader.h  CacheEngine.hpp  CryptoEngine.hpp  DNNConfigIO.h  DNNDataIO.h  DNNParamIO.h  DNNTrainer.h  Enclave-Types.h  IBlockable.h  IO.h  IRecordSetView.h  SpecialBuffer.hpp  SpecialBufferCommon.h  bitonic-sort.h  bitonic-sort.hpp  darknet-addons.h  darknet.h  enclave-app.h  example_utils.h  example_utils.hpp  global-vars-trusted.h  memory-SGX-missing.h  pcg_basic.h  prepare-dnnl.h  sgx-darknet.h  tests.h  timingdefs.h  trusted-configs.h  trusted-configs.h.in  util.h
trusted/src/: BlockHeader.cpp  DNNConfigIO.cpp  DNNDataIO.cpp  DNNParamIO.cpp  DNNTrainer.cpp  IBlockable.cpp  SpecialBufferCommon.cpp  bitonic-sort.cpp  darknet-addons.c  darknet-addons.cpp  enclave-app.cpp  extra-util.cpp  prepare-dnnl.cpp  tests.cpp  util.cpp
untrusted/: enclave_u.c  enclave_u.h
untrusted/include/: App-Types.h  CryptoEngine.hpp  IStorage.h  app.h  darknet.h  extras-torch.h  global-vars-untrusted.h  load-image.h  timingdefs.h  untrusted-configs.h  untrusted-configs.h.in
untrusted/src/: app.cpp  extras-torch.cpp  load-image.cpp  main.cpp
(+79 files in other folders)
